# pangofin

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
fuzz/: CMakeLists.txt  fuzzy_test.cc
inc/: factorial.hpp  seed.hh  soda.hh
src/: CMakeLists.txt  factorial.cc  main.cc  seed.cc  soda.cc
src/module/: pangofin.cc  pangofin.hpp
test/: CMakeLists.txt  pangofin_test.cc  test_main.cc  test_seed_scn_vector.cc  test_soda.cc
